[tool.poetry]
name = "ast-compat"
version = "0.12.0"
description = "cross-version compatible ast library"
authors = ["thautawarm <twshere@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
